--- a/project.config
+++ b/project.config
@@ -2,4 +2,5 @@
 	inheritFrom = All-Projects
 [access "refs/*"]
 	owner = group ldap/akraino-gerrit-airshipinabottle_deploy-committers
+	owner = group saml/akraino-gerrit-airshipinabottle_deploy-committers
 	read = group GitHub Replication
